--- a/stylus/framework/chat-content.styl
+++ b/stylus/framework/chat-content.styl
@@ -327,7 +327,7 @@
 	.message
 		display: inline-block
 		clear: both
-		padding: 10px 14px 9px 14px
+		padding: 10px 11px 9px 14px
 		position: relative
 		border: solid 1px #E5E5E5
 		border-radius: 6px 6px 6px 6px
